--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
    
 
-   <h2 class="center">Meu video predileto:</h2>
+   <h2 class="center">Meu video favorito:</h2>
 
    <div class="container mb-50">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/DtZRztnn6jo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -51,11 +51,11 @@
    <footer>
 
       <div class="container">
-         <a href="https://www.facebook.com/" target="_blank">
+         <a href="https://github.com/Filipesssantana" target="_blank">
             <img class="tm-social p-30" src="assets/img/github_preto.png" alt="Logo do Github">
          </a>
          
-         <a href="https://www.linkedin.com/" target="_blank">
+         <a href="https://www.linkedin.com/in/filipesanatana/" target="_blank">
             <img class="tm-social p-30" src="assets/img/linkedin_preto.png" alt="Logo do Linkedin">
          </a>
          
